# AniBT-Speed

./: .dockerignore  .env.example  .gitignore  .impeccable.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  test.sh
.github/workflows/: build-and-push.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  scheduler.py
backend/app/api/: auth.py  instances.py  mediainfo.py  rss.py  settings.py  stats.py  telegram.py
backend/app/services/: load_balancer.py  mediainfo_processor.py  qbt_client.py  queue_manager.py  rate_limiter.py  rss_poller.py  space_manager.py  tag_manager.py  telegram_notifier.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  SettingsForm.tsx  StatusCard.tsx  ui.tsx
frontend/src/pages/: Dashboard.tsx  Instances.tsx  Login.tsx  Logs.tsx  MediaInfo.tsx  QueuePolicy.tsx  RSSManager.tsx  RateLimit.tsx  SpacePolicy.tsx  Telegram.tsx
frontend/src/types/: index.ts
