[project]
name = "anibt-speed-backend"
version = "0.1.0"
description = "AniBT-Speed 种群加速管理平台后端"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.35",
    "qbittorrent-api>=2024.8.65",
    "apscheduler>=3.10.4",
    "python-telegram-bot>=21.5",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8",
    "feedparser>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
